force-app/main/default/objects/PDF_ESignature_Audit_Event__c/PDF_ESignature_Audit_Event__c.object-meta.xml
<CustomObject>
    <description>PDF-first e-signature package object.</description>
    <label>PDF E-Signature Audit Event</label>
    <nameField>
        <displayFormat>PESAUD-{000000}</displayFormat>
        <label>PDF E-Signature Audit Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF E-Signature Audit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>