force-app/main/default/objects/PDF_ESignature_Audit_Event__c/fields/Actor_Email__c.field-meta.xml
<CustomField>
    <fullName>Actor_Email__c</fullName>
    <label>Actor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>