force-app/main/default/objects/PDF_ESignature_Audit_Event__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>PDF_ESignature_Envelope__c</referenceTo>
    <relationshipLabel>E-Signature Audit Events</relationshipLabel>
    <relationshipName>PDF_ESignature_Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>