force-app/main/default/objects/PDF_ESignature_Audit_Event__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>